if(Qt5Core_FOUND)
    option(ENABLE_QTDESIGNER_WIDGETS "Build Qt Designer Plugins for simQt widgets" ON)
    if(ENABLE_QTDESIGNER_WIDGETS)
        add_subdirectory(QtDesignerWidgets)
    endif()
endif()

if (USING_VCPKG)
    message(STATUS "VCPKG is enabled disable the webp plugin")
else()
    add_subdirectory(wbp)
endif()
