if(Qt5Core_FOUND OR Qt6Core_FOUND)
    option(ENABLE_QTDESIGNER_WIDGETS "Build Qt Designer Plugins for simQt widgets" ON)
    if(ENABLE_QTDESIGNER_WIDGETS)
        add_subdirectory(QtDesignerWidgets)
    endif()
endif()

option(ENABLE_WBP_PLUGIN "Build OSG WebP plugin for wbp extension" ON)
if(ENABLE_WBP_PLUGIN)
    add_subdirectory(wbp)
endif()
